Update gRPC Auth config
Update gRPC Auth config so that, if no headers are
specified in `allowedHeaders`, _all_ headers must
be sent rather than a specific list.

Signed-off-by: Nick Young <nick@isovalent.com>

--- a/config/crd/experimental/gateway.networking.k8s.io_httproutes.yaml
+++ b/config/crd/experimental/gateway.networking.k8s.io_httproutes.yaml
@@ -910,13 +910,7 @@ spec:
                                             AllowedRequestHeaders specifies what headers from the client request
                                             will be sent to the authorization server.
 
-                                            If this list is empty, then the following headers must be sent:
-
-                                            - `Authorization`
-                                            - `Location`
-                                            - `Proxy-Authenticate`
-                                            - `Set-Cookie`
-                                            - `WWW-Authenticate`
+                                            If this list is empty, then all headers must be sent.
 
                                             If the list has entries, only those entries must be sent.
                                           items:
@@ -2396,13 +2390,7 @@ spec:
                                       AllowedRequestHeaders specifies what headers from the client request
                                       will be sent to the authorization server.
 
-                                      If this list is empty, then the following headers must be sent:
-
-                                      - `Authorization`
-                                      - `Location`
-                                      - `Proxy-Authenticate`
-                                      - `Set-Cookie`
-                                      - `WWW-Authenticate`
+                                      If this list is empty, then all headers must be sent.
 
                                       If the list has entries, only those entries must be sent.
                                     items:
@@ -5062,13 +5050,7 @@ spec:
                                             AllowedRequestHeaders specifies what headers from the client request
                                             will be sent to the authorization server.
 
-                                            If this list is empty, then the following headers must be sent:
-
-                                            - `Authorization`
-                                            - `Location`
-                                            - `Proxy-Authenticate`
-                                            - `Set-Cookie`
-                                            - `WWW-Authenticate`
+                                            If this list is empty, then all headers must be sent.
 
                                             If the list has entries, only those entries must be sent.
                                           items:
@@ -6548,13 +6530,7 @@ spec:
                                       AllowedRequestHeaders specifies what headers from the client request
                                       will be sent to the authorization server.
 
-                                      If this list is empty, then the following headers must be sent:
-
-                                      - `Authorization`
-                                      - `Location`
-                                      - `Proxy-Authenticate`
-                                      - `Set-Cookie`
-                                      - `WWW-Authenticate`
+                                      If this list is empty, then all headers must be sent.
 
                                       If the list has entries, only those entries must be sent.
                                     items:
