--- a/conformance/tests/httproute-request-mirror.yaml
+++ b/conformance/tests/httproute-request-mirror.yaml
@@ -1,7 +1,7 @@
 apiVersion: gateway.networking.k8s.io/v1
 kind: HTTPRoute
 metadata:
-  name: request-mirror
+  name: httproute-request-mirror
   namespace: gateway-conformance-infra
 spec:
   parentRefs:
