--- a/geps/gep-4078/metadata.yaml
+++ b/geps/gep-4078/metadata.yaml
@@ -1,10 +1,12 @@
 apiVersion: internal.gateway.networking.k8s.io/v1alpha1
 kind: GEPDetails
-number: 91
-name: Client Certificate Validation for TLS terminating at the Gateway Listener
+number: 4078
+name: Certificate Pinning for Client Certificate Validation 
 status: Provisional
+# Any authors who contribute to the GEP in any way should be listed here using
+# their GitHub handle.
 authors:
-  - arkodg
+  - snorwin
 relationships:
   # obsoletes indicates that a GEP makes the linked GEP obsolete, and completely
   # replaces that GEP. The obsoleted GEP MUST have its obsoletedBy field
@@ -14,10 +16,10 @@ relationships:
   # extends indicates that a GEP extends the linked GEP, adding more detail
   # or additional implementation. The extended GEP MUST have its extendedBy
   # field set back to this GEP.
-  extends: {} 
-  extendedBy:
-    - number: 4078
-      name: Certificate Pinning for Client Certificate Validation
+  extends:
+    - number: 91
+      name: Client Certificate Validation for TLS terminating at the Gateway Listener
+  extendedBy: {}
   # seeAlso indicates other GEPs that are relevant in some way without being
   # covered by an existing relationship.
   seeAlso: {}
