--- a/geps/gep-1897/metadata.yaml
+++ b/geps/gep-1897/metadata.yaml
@@ -9,6 +9,9 @@ authors:
   - robscott
   - youngnick
 relationships:
+  extendedBy:
+    - number: 4080
+      name: Certificate Revocation Lists for Certificate Validiation
   obsoletes:
     - number: 1282
       name: Describing Backend Properties
